--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   shared_preferences: ^0.5.12+4
   provider: ^4.3.3
   cloud_firestore: ^0.16.0+1
+  flutter_datetime_picker: ^1.5.0
 
 
   # The following adds the Cupertino Icons font to your application.
